--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "author": "Rafael Freitas",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node ./bot.ts",
-    "dev": "ts-node-dev ./bot.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsup",
+    "dev": "tsup --watch"
   },
   "dependencies": {
     "grammy": "^1.11.2",
@@ -16,9 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.3",
-    "node-fetch": "^3.3.1",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
+    "tsup": "^6.7.0",
     "typescript": "^4.7.4"
   }
 }
