--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "author": "Rafael Freitas",
   "license": "MIT",
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch"
+    "build": "tsup src/index.ts",
+    "dev": "tsup src/index.ts --watch"
   },
   "dependencies": {
-    "grammy": "^1.11.2",
+    "grammy": "^1.16.1",
     "openai": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.2.3",
+    "dotenv": "^16.0.3",
     "tsup": "^6.7.0",
     "typescript": "^4.7.4"
   }
