--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "lib": ["es2017", "dom"],
     "target": "es2017",
     "module": "commonjs",
-    "strict": true
+    "strict": true,
+    "outDir": "build"
   }
 }
