--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [14.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -23,10 +23,10 @@ jobs:
         cache: 'npm'
 
     - name: Dependencies
-      run: npm ci
+      run: yarn
 
     - name: Build
-      run: npm run build --if-present
+      run: yarn build
 
     - name: Deploy
       uses: appleboy/ssh-action@v0.1.10
