--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,19 +33,21 @@ jobs:
     - name: Build
       run: yarn build
 
-    - name: SSH
-      run: |
-          mkdir -p ~/.ssh/
-          echo "$SSH_KEY" > ~/.ssh/staging.key
-          chmod 600 ~/.ssh/staging.key
-          cat >>~/.ssh/config <<END
-          Host staging
-            HostName $SSH_HOST
-            User $SSH_USER
-            IdentityFile ~/.ssh/staging.key
-            StrictHostKeyChecking no
-          END
-          
-    - name: Deploy
-      run: |
-        ssh staging 'cd ~/dev/fiatvoluntastua && npm && pm2 reload pm2.config.js'
+  deploy:
+  - name: SSH
+    run: env|sort
+    run: |
+        mkdir -p ~/.ssh/
+        echo "$SSH_KEY" > ~/.ssh/staging.key
+        chmod 600 ~/.ssh/staging.key
+        cat >>~/.ssh/config <<END
+        Host staging
+          HostName $SSH_HOST
+          User $SSH_USER
+          IdentityFile ~/.ssh/staging.key
+          StrictHostKeyChecking no
+        END
+        
+  - name: Deploy
+    run: |
+      ssh staging 'cd ~/dev/fiatvoluntastua && npm && pm2 reload pm2.config.js'
