--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.2.3",
     "dotenv": "^16.0.3",
     "tsup": "^6.7.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "node-cron": "^3.0.2"
   }
 }
