--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es2017",
     "module": "commonjs",
     "strict": true,
-    "outDir": "build"
+    "outDir": "build",
+    "resolveJsonModule": true
   }
 }
