--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "grammy": "^1.16.1",
-    "openai": "^3.2.1"
+    "openai": "^4.20.1"
   },
   "devDependencies": {
     "@types/node": "^20.2.3",
     "dotenv": "^16.0.3",
+    "node-cron": "^3.0.2",
     "tsup": "^6.7.0",
-    "typescript": "^4.7.4",
-    "node-cron": "^3.0.2"
+    "typescript": "^4.7.4"
   }
 }
