--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
 
     - name: Build
       run: |
-        ssh staging 'cd ~/dev/fiatvoluntastua && git pull && yarn && yarn build && pm2 reload pm2.config.js'
+        ssh staging 'cd ~/dev/fiatvoluntastua && git pull && npm i -g yarn && yarn && yarn build && pm2 reload pm2.config.js'
