--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,5 @@ jobs:
 
     - name: Build
       run: |
-        ssh staging 'curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash - &&\'
+        ssh staging 'curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash'
         ssh staging 'sudo apt-get install -y nodejs && cd ~/dev/fiatvoluntastua && git pull && npm i -g yarn && yarn && yarn build && pm2 reload pm2.config.js'
