--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,4 @@ jobs:
         ssh staging 'curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash'
         ssh staging 'sudo apt-get install -y nodejs'
         ssh staging 'sudo npm i -g yarn'
-        ssh staging 'cd ~/dev/fiatvoluntastua'
-        ssh staging 'git pull'
-        ssh staging 'yarn'
-        ssh staging 'yarn build'
-        ssh staging 'pm2 reload pm2.config.js'
+        ssh staging 'cd ~/dev/fiatvoluntastua && git pull && yarn && yarn build && pm2 reload pm2.config.js'
