--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "license": "MIT",
   "scripts": {
     "build": "tsup src/index.ts",
-    "dev": "tsup src/index.ts --watch"
+    "dev": "tsup src/index.ts --watch",
+
+    "docker:build": "docker build --tag 'fiatvoluntastua' .",
+    "docker:start": "docker run --name 'fiatvoluntastua' -d 'fiatvoluntastua'",
+    "docker:stop": "docker stop fiatvoluntastua && docker rm fiatvoluntastua"
   },
   "dependencies": {
     "grammy": "^1.16.1",
