--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,9 @@
     "outDir": "build",
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
