--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 
     "docker:build": "docker build --tag 'fiatvoluntastua' .",
     "docker:start": "docker run --name 'fiatvoluntastua' -v chat-data:/src/dist -d 'fiatvoluntastua'",
-    "docker:stop": "docker stop fiatvoluntastua && docker rm fiatvoluntastua"
+    "docker:stop": "docker stop 'fiatvoluntastua' && docker rm 'fiatvoluntastua'"
   },
   "dependencies": {
     "grammy": "^1.16.1",
