testing new dockerfile

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsup src/index.ts",
     "dev": "tsup src/index.ts --watch",
 
-    "docker:build": "docker build --tag 'fiatvoluntastua' .",
+    "docker:build": "docker build --no-cache --tag 'fiatvoluntastua' .",
     "docker:start": "docker run --name 'fiatvoluntastua' -v chat-data:/src/dist -d 'fiatvoluntastua'",
     "docker:stop": "docker stop 'fiatvoluntastua' && docker rm 'fiatvoluntastua'"
   },
